# trying-agent-frameworks

./: .gitignore
crewai/: README.md  pyproject.toml  report.md
crewai/src/trying_crew/: crew.py  main.py
langgraph/notebook/: quickstart.ipynb
pydanticai/: hello_world.py  roulette_wheel.py
