[project]
name = "trying_crew"
version = "0.1.0"
description = "trying_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
trying_crew = "trying_crew.main:run"
run_crew = "trying_crew.main:run"
train = "trying_crew.main:train"
replay = "trying_crew.main:replay"
test = "trying_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
